--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   splash_screen_view: ^3.0.0
   curved_navigation_bar: ^1.0.3
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
