--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   splash_screen_view: ^3.0.0
   curved_navigation_bar: ^1.0.3
   flutter_svg: ^1.0.3
+  getwidget: ^3.0.1
 
 dev_dependencies:
   flutter_test:
