--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   splash_screen_view: ^3.0.0
   curved_navigation_bar: ^1.0.3
   flutter_svg: ^1.0.3
-  getwidget: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/svg_icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
