--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   flutter_svg: ^1.0.3
   getwidget: ^3.0.1
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
