--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_svg: ^1.0.3
   getwidget: ^3.0.1
   carousel_slider: ^4.1.1
+  shimmer: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
