--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   carousel_slider: ^4.1.1
   shimmer: ^2.0.0
   intl: ^0.17.0
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
